2006-02-22  Youchen Lee  <copyleft@utcr.org>

	* src/mainframe.h,
	src/mainframe.cpp (CMainFrame::OnFullscreenMode)
	(CMainFrame::fullscreen_mode_entries[]),
	src/notebook.h (CNotebook::HideTabs) (CNotebook::ShowTabs): Added
	Fullscreen Mode support.
	
	* po/pcmanx.pot,
	po/zh_TW.po
	po/zh_CN.po: Updated po files for fullscreen mode, modified my email
	address, added developer Emfox Zhou to zh_TW.po and zh_CN.po (not
	contained Chinese name yet).

2006-02-20  Jim Huang  <jserv@kaffe.org>

	* autogen.sh: Fixlet to autotool generation.

2006-02-19  Jim Huang  <jserv@kaffe.org>

	* configure.ac: Added Xft headers detection workaround.

2006-02-19  Jim Huang  <jserv@kaffe.org>

	* src/appconfig.h (ShowStatusBar),
	src/generalprefpage.h (m_ShowStatusBar),
	src/appconfig.cpp (CAppConfig::DoDataExchange)
	(CAppConfig::SetToDefault): New members to indicate if
	status bar should be shown. Default: shown.

	* src/generalprefpage.cpp (CGeneralPrefPage::CGeneralPrefPage)
	(CGeneralPrefPage::CGeneralPrefPage) (CGeneralPrefPage::OnOK): Handle
	the toggled value of show/hide for status bar.

	* src/mainframe.cpp (CMainFrame::CMainFrame): Toggle show/hide for
	status bar.
	TODO: we shall be able to toggle and show/hide the status bar
	immediately.

2006-02-19  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* po/pcmanx.pot,
	po/zh_TW.po,
	po/zh_CN.po: cd po && make update-po

2006-02-18  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/mainframe.h,
	src/view/telnetview.cpp,
	src/mainframe.cpp: Add runtime Mouse Support switch.

2006-02-18  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/mainframe.cpp: Oops, missing translations and bot icons, added.

2006-02-18  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/mainframe.h,
	src/mainframe.cpp: Remove deprecated codes of GUI.

2006-02-18  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/mainframe.h,
	src/mainframe.cpp: Finish GUI transition to UIManager.

2006-02-16  Emfox Zhou  <emfoxzhou@gmail.com>
