@@ -1,3 +1,12 @@
+2006-02-22  Jim Huang  <jserv@kaffe.org>
+
+	* src/docklet/eggtrayicon.h,
+	src/docklet/eggtrayicon.c (egg_tray_icon_manager_filter)
+	(egg_tray_icon_update_manager_window)
+	(egg_tray_icon_manager_window_destroyed) (egg_tray_icon_realize):
+	Apply some patches from libegg to fix the extra spacing between
+	icons.
+
 2006-02-22  Youchen Lee  <copyleft@utcr.org>
 
 	* src/mainframe.h,
